# src.boilerplate

./: Doxyfile  LICENSE  README  README.markdown  README.md  TJUnit3.java  TJUnit4.java  WARRANTY  app-build.xml  class.cc  class.h  elisp.el  jar-build.xml  javaIfc.java  javaMain.java  javaSrc.java  javadoc-package.html  m-singelton.h  main-nonBoost.cc  main.cc  octave-fn.m  perl-module.pm  projMaster-build.xml  script.R  script.m  script.pl  script.sh  script.sql  script.tcl  singleton.cc  singleton.h  spImpl.cc  spImpl.h  tBoostUnit.cc  tJUnit.java  template_t.h  template_t.tcc  web.js
autoconf-make/: AUTHORS  COPYING  ChangeLog  NEWS  README  WARRANTY  ax_jpwTools.m4  configure.ac  doxygen.am  make.syscfg.mk  src.Makefile.am  topdir.Makefile.am
gnu-make/: Makefile.dir.template  Makefile.src.template  Makefile.subdir.template  Makefile.template  make.autogenV.mk  make.cleanup.mk  make.deprules.mk  make.installrules.mk  make.miscrules.mk  make.syscfg.mk  make.tar_n_doc.mk  make.vars.mk
packaging/: debian.control.in  template.spec  template.spec.in
posix-make/: Makefile.template  make.autogenV.mk  make.syscfg.mk  make.vars.mk
